--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+
+    <div class="logo">
+        <img src="Assets/sun.png" alt="" class="sun">
+        <img src="Assets/moon.png" alt="" class="moon hide">
+    </div>
+
     <div class="card">
         <h1>Quote Of The Day</h1>
         <div class="quote">
@@ -18,7 +24,7 @@
         <div class="buttons">
 
             <button class="btn-1">New Quote</button>
-            <button class="btn-2"><img src="copy.png" alt="" class="image">copy</button>
+            <button class="btn-2"><img src="Assets/copy.png" alt="" class="image">copy</button>
         </div>
     </div>
     <script src="script.js"></script>
