--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 
     <div class="logo">
-        <img src="Assets/sun.png" alt="" class="sun">
-        <img src="Assets/moon.png" alt="" class="moon hide">
+        <img src="Assets/sun.png" alt="" class="sun hide">
+        <img src="Assets/moon.png" alt="" class="moon ">
     </div>
 
     <div class="card">
